crates/snapshots/snapshots/cli_snapshots__styles__style_less_variables.snap
---
source: crates/snapshots/tests/cli_snapshots/styles.rs
expression: document
---
case: style_less_variables

--- step: migrate ---
status: 0
stdout: "--- a/Button.module.less\n+++ b/Button.module.less\n@@ -1,2 +1,2 @@\n @space: 13px;\n-.button { padding: @space; }\n+\n--- a/Button.tsx\n+++ b/Button.tsx\n@@ -1,2 +1,1 @@\n-import styles from './Button.module.less';\n-export const Button = () => <button className={styles.button}>Save</button>;\n+export const Button = () => <button className=\"p-[13px]\">Save</button>;\nApplied 2 file(s); 1 rule(s) converted, 0 retained.\n"
stderr: "warning[rebuild-required] Button.module.less Rebuild this preprocessor entry to refresh its generated CSS.\n"
workspace delta:
  modified Button.module.less
    before: "@space: 13px;\n.button { padding: @space; }\n"
    after: "@space: 13px;\n\n"
  modified Button.tsx
    before: "import styles from './Button.module.less';\nexport const Button = () => <button className={styles.button}>Save</button>;\n"
    after: "export const Button = () => <button className=\"p-[13px]\">Save</button>;\n"

--- step: second run ---
status: 0
stdout: "Applied 0 file(s); 0 rule(s) converted, 0 retained.\n"
stderr: ""
workspace delta:
  unchanged
