crates/snapshots/snapshots/cli_snapshots__styles__style_media_extraction.snap
---
source: crates/snapshots/tests/cli_snapshots/styles.rs
expression: document
---
case: style_media_extraction

--- step: extract ---
status: 0
stdout: "--- a/Button.module.css\n+++ b/Button.module.css\n@@ -1,2 +0,0 @@\n-.button { padding: 13px; }\n-@media screen and (max-width: 700px) { .button { margin: 7px; } }\n--- a/Button.tsx\n+++ b/Button.tsx\n@@ -1,2 +1,1 @@\n-import styles from './Button.module.css';\n-export const Button = () => <button className={styles.button}>Save</button>;\n+export const Button = () => <button className=\"p-[13px] screen:width-lte-700px:m-[7px]\">Save</button>;\n--- a/globals.css\n+++ b/globals.css\n@@ -1,1 +1,13 @@\n @import \"tailwindcss\";\n+\n+@custom-variant screen {\n+  @media screen {\n+    @slot;\n+  }\n+}\n+\n+@custom-variant width-lte-700px {\n+  @media (width <= 700px) {\n+    @slot;\n+  }\n+}\nApplied 3 file(s); 2 rule(s) converted, 0 retained.\n"
stderr: ""
workspace delta:
  deleted Button.module.css
    before: ".button { padding: 13px; }\n@media screen and (max-width: 700px) { .button { margin: 7px; } }\n"
  modified Button.tsx
    before: "import styles from './Button.module.css';\nexport const Button = () => <button className={styles.button}>Save</button>;\n"
    after: "export const Button = () => <button className=\"p-[13px] screen:width-lte-700px:m-[7px]\">Save</button>;\n"
  modified globals.css
    before: "@import \"tailwindcss\";\n"
    after: "@import \"tailwindcss\";\n\n@custom-variant screen {\n  @media screen {\n    @slot;\n  }\n}\n\n@custom-variant width-lte-700px {\n  @media (width <= 700px) {\n    @slot;\n  }\n}\n"

--- step: rerun is idempotent ---
status: 0
stdout: "Applied 0 file(s); 0 rule(s) converted, 0 retained.\n"
stderr: ""
workspace delta:
  unchanged
