crates/snapshots/snapshots/cli_snapshots__styles__style_multibyte.snap
---
source: crates/snapshots/tests/cli_snapshots/styles.rs
expression: document
---
case: style_multibyte

--- step: migrate ---
status: 0
stdout: "--- a/Button.module.css\n+++ b/Button.module.css\n@@ -1,2 +1,2 @@\n-.button { padding: 13px; }\n+\n .other { --label: \"저장 😀\"; }\n--- a/Button.tsx\n+++ b/Button.tsx\n@@ -1,2 +1,2 @@\n import styles from './Button.module.css';\n-export const Button = () => <button className={styles.button}>저장 😀</button>;\n+export const Button = () => <button className=\"p-[13px]\">저장 😀</button>;\nApplied 2 file(s); 1 rule(s) converted, 1 retained.\n"
stderr: "warning[unresolved-selector-target] Button.module.css:2:1-2:29 No exclusively supported className references were found.\n"
workspace delta:
  modified Button.module.css
    before: ".button { padding: 13px; }\n.other { --label: \"저장 😀\"; }\n"
    after: "\n.other { --label: \"저장 😀\"; }\n"
  modified Button.tsx
    before: "import styles from './Button.module.css';\nexport const Button = () => <button className={styles.button}>저장 😀</button>;\n"
    after: "import styles from './Button.module.css';\nexport const Button = () => <button className=\"p-[13px]\">저장 😀</button>;\n"

--- step: second run ---
status: 0
stdout: "Applied 0 file(s); 0 rule(s) converted, 1 retained.\n"
stderr: "warning[unresolved-selector-target] Button.module.css:2:1-2:29 No exclusively supported className references were found.\n"
workspace delta:
  unchanged
