crates/snapshots/snapshots/cli_snapshots__styles__style_nested_conditions.snap
---
source: crates/snapshots/tests/cli_snapshots/styles.rs
expression: document
---
case: style_nested_conditions

--- step: migrate ---
status: 0
stdout: "--- a/Button.module.css\n+++ b/Button.module.css\n@@ -1,1 +0,0 @@\n-@media (min-width: 48rem) { .button { padding: 1rem; } @supports (display: grid) { .button { display: grid; } } }\n--- a/Button.tsx\n+++ b/Button.tsx\n@@ -1,2 +1,1 @@\n-import styles from './Button.module.css';\n-export const Button = () => <button className={styles.button}>Save</button>;\n+export const Button = () => <button className=\"md:p-4 md:supports-[display:grid]:grid\">Save</button>;\nApplied 2 file(s); 2 rule(s) converted, 0 retained.\n"
stderr: ""
workspace delta:
  deleted Button.module.css
    before: "@media (min-width: 48rem) { .button { padding: 1rem; } @supports (display: grid) { .button { display: grid; } } }\n"
  modified Button.tsx
    before: "import styles from './Button.module.css';\nexport const Button = () => <button className={styles.button}>Save</button>;\n"
    after: "export const Button = () => <button className=\"md:p-4 md:supports-[display:grid]:grid\">Save</button>;\n"
