crates/snapshots/snapshots/cli_snapshots__styles__style_partial_idempotent.snap
---
source: crates/snapshots/tests/cli_snapshots/styles.rs
expression: document
---
case: style_partial_idempotent

--- step: migrate ---
status: 0
stdout: "--- a/Button.module.css\n+++ b/Button.module.css\n@@ -1,2 +1,2 @@\n-.button { padding: 13px; }\n+\n .other { display: grid; }\n--- a/Button.tsx\n+++ b/Button.tsx\n@@ -1,2 +1,2 @@\n import styles from './Button.module.css';\n-export const Button = () => <button className={styles.button}>Save</button>;\n+export const Button = () => <button className=\"p-[13px]\">Save</button>;\nApplied 2 file(s); 1 rule(s) converted, 1 retained.\n"
stderr: "warning[unresolved-selector-target] Button.module.css:2:1-2:26 No exclusively supported className references were found.\n"
workspace delta:
  modified Button.module.css
    before: ".button { padding: 13px; }\n.other { display: grid; }\n"
    after: "\n.other { display: grid; }\n"
  modified Button.tsx
    before: "import styles from './Button.module.css';\nexport const Button = () => <button className={styles.button}>Save</button>;\n"
    after: "import styles from './Button.module.css';\nexport const Button = () => <button className=\"p-[13px]\">Save</button>;\n"

--- step: second run ---
status: 0
stdout: "Applied 0 file(s); 0 rule(s) converted, 1 retained.\n"
stderr: "warning[unresolved-selector-target] Button.module.css:2:1-2:26 No exclusively supported className references were found.\n"
workspace delta:
  unchanged
