crates/snapshots/snapshots/cli_snapshots__styles__style_pseudo_argument.snap
---
source: crates/snapshots/tests/cli_snapshots/styles.rs
expression: document
---
case: style_pseudo_argument

--- step: migrate ---
status: 0
stdout: "--- a/Card.tsx\n+++ b/Card.tsx\n@@ -1,1 +1,1 @@\n-export const Card = () => <div className=\"a\" />;\n+export const Card = () => <div className=\"a [&:not(.abc)]:p-[13px]\" />;\nApplied 1 file(s); 0 rule(s) converted, 1 retained.\n"
stderr: "warning[retained-global-rule] legacy.css:1:1-1:32 Global CSS is never deleted automatically.\n"
workspace delta:
  modified Card.tsx
    before: "export const Card = () => <div className=\"a\" />;\n"
    after: "export const Card = () => <div className=\"a [&:not(.abc)]:p-[13px]\" />;\n"
