crates/snapshots/snapshots/cli_snapshots__styles__style_quoted_global_rerun.snap
---
source: crates/snapshots/tests/cli_snapshots/styles.rs
expression: document
---
case: style_quoted_global_rerun

--- step: migrate ---
status: 0
stdout: "--- a/Card.tsx\n+++ b/Card.tsx\n@@ -1,1 +1,1 @@\n-export const Card = () => <div className=\"card\" />;\n+export const Card = () => <div className=\"card font-my-font\" />;\n--- a/globals.css\n+++ b/globals.css\n@@ -1,1 +1,5 @@\n @import \"tailwindcss\";\n+\n+@theme {\n+  --font-my-font: \"My Font\", sans-serif;\n+}\nApplied 2 file(s); 0 rule(s) converted, 1 retained.\n"
stderr: "warning[retained-global-rule] legacy.css:1:1-1:46 Global CSS is never deleted automatically.\n"
workspace delta:
  modified Card.tsx
    before: "export const Card = () => <div className=\"card\" />;\n"
    after: "export const Card = () => <div className=\"card font-my-font\" />;\n"
  modified globals.css
    before: "@import \"tailwindcss\";\n"
    after: "@import \"tailwindcss\";\n\n@theme {\n  --font-my-font: \"My Font\", sans-serif;\n}\n"

--- step: second run ---
status: 0
stdout: "Applied 0 file(s); 0 rule(s) converted, 1 retained.\n"
stderr: "warning[retained-global-rule] legacy.css:1:1-1:46 Global CSS is never deleted automatically.\n"
workspace delta:
  unchanged
